fix some text clipping

--- a/code/adventure map/adventuremap.css
+++ b/code/adventure map/adventuremap.css
@@ -39,7 +39,11 @@
     top: 50%;
     transform: translate(-50%, -50%);
     margin: 0;
-    font-size: 14px;
+    font-size: 12px;
+    width: 100%;
+    line-height: 1;
+    text-align: center;
+    white-space: pre-line;
 }
 
 .percentage {
